@@ -18,13 +18,15 @@ AUX libproxy-0.4.6-flags-mixing.patch 415 RMD160 41dfeee7ec15c58b3e65326b71f959c
 AUX libproxy-0.4.6-mozjs-link_directory.patch 1365 RMD160 4ba7b7f923a8d48575db2f13c86482d78e54ae1c SHA1 0a083243f29571e5e971de6df6e4c81b9cf6444f SHA256 783bc34d685ddf3ba6e6c85003417412f2bb87e9fc87c4ca5c9c56bf5e99aea5
 AUX libproxy-0.4.6-xulrunner-2.patch 4763 RMD160 66210bdb6497b14358fd73037b6e9813ffd55de3 SHA1 a0ee71fc9b6cd15176b53601655ee6c0d760651b SHA256 e4bd9cb3c43249593015c1fe2b6630e999627e01ca1091455a70ec32d0233525
 DIST libproxy-0.4.6.tar.gz 82483 RMD160 f5f03c84ad2d87fe728869fadc669628737c639e SHA1 6e9745c87b774f34bf53f07a54284c0d72020e94 SHA256 9ad912e63b1efca98fb442240a2bc7302e6021c1d0b1b9363327729f29462f30
+DIST libproxy-0.4.7.tar.gz 91092 RMD160 a09c8320cbabed23c84ceddf3c9b572cf89c9c0e SHA1 b01ebbdf837babf63f38ee34e261d76f23dad319 SHA256 8fe0a58810139ba3c2e186deccf3e68adcd127aa0e972b0862b30b3dde493797
 EBUILD libproxy-0.4.6-r3.ebuild 2676 RMD160 b5cb5329d0f91e9a386b8260394b5d4b3ddeab6b SHA1 12cda6f8392e883374f1f93f0465536f844ae3e5 SHA256 b30facb219795019a5f798fea22f7b53f855fcb66751f4af1aa2ed69e607bb84
-MISC ChangeLog 10743 RMD160 2665c3c2f904beb3c0a97e623d370ab3070f06d2 SHA1 975c363482770ca0493e574b1c342f5be0d9a043 SHA256 017960bfc17f55dc93069737a3cdda6dd39291b25e845168c41d75c0b2e56d27
-MISC metadata.xml 658 RMD160 21df7580031de423ef6647c07350806f9e6149dc SHA1 db7e4a8d582788c3af1629213ce8190b0d85626a SHA256 d16b934e849c02fa2ff14411ceb5242a68633a3d4b88848c92a5ca53c6c934f0
+EBUILD libproxy-0.4.7.ebuild 2499 RMD160 ce1ba3a725b229b75020b09d1dfc057c3c820ab5 SHA1 9ef6d5046ccd4b9340faa8147384f042e664bbb2 SHA256 860d76c7d46f8c983d5b63b3355c3808a39d782903d07b5990030f4e8bfe3548
+MISC ChangeLog 10911 RMD160 bc35d69c878737b79273681c1cc77c5134d3edab SHA1 e099713045bb92bb7808cdbc28c40d1b182da01d SHA256 b1cdcf015f35b260e095b49048bd8463c4faf9ce9a2a5bde72c1124c6c95ad01
+MISC metadata.xml 406 RMD160 5c499c2bfe217a922f13323d217726c7160deb94 SHA1 ea67953dc365e7657e55a8144936ef6234112b41 SHA256 cf35b0493dce3b4d725a8532a7fa4679241f81eb9e0560469d63409f44e9daef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk5YACkACgkQX3X2B8XHTolERACfSGtnEPvlwFjJ8q2XZPjmqO8Y
-yfIAn257IzdDL/pLuAtGYIab0A9ldtId
-=3Fy2
+iEYEARECAAYFAk64LPEACgkQX3X2B8XHTolz7wCfSOAuA3UkL6Tvp7KEXo160h+s
+JtwAnRQp2JKjtFgTrQmGvnhKCEAKb9SA
+=WzTz
 -----END PGP SIGNATURE-----
