@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libproxy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.68 2011/08/06 09:05:25 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.69 2011/10/18 19:05:58 pacho Exp $
+
+*libproxy-0.4.7 (18 Oct 2011)
+
+  18 Oct 2011; Pacho Ramos <pacho@gentoo.org> +libproxy-0.4.7.ebuild,
+  -libproxy-0.4.6.ebuild, metadata.xml:
+  Version bump, remove old.
 
   06 Aug 2011; Zac Medico <zmedico@gentoo.org> libproxy-0.4.6-r3.ebuild:
   Add ~x86-linux keyword.
